--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "tsc -p . && webpack --env.prod=true",
     "start": "webpack-dev-server"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "awesome-typescript-loader": "3.1.3",
     "exports-loader": "^0.6.4",
